<resources>
    <string name="appname"></string>
    <string name="app_slogan"></string>
    <string name="menu_live"></string>
    <string name="menu_discover"></string>
    <string name="menu_search"></string>
    <string name="menu_settings"></string>
    <string name="error_network_title"></string>
    <string name="error_network_subtitle"></string>
    <string name="error_server_title"></string>
    <string name="error_server_subtitle"></string>
    <string name="error_401_title"></string>
    <string name="error_401_content"></string>
    <string name="error_user_title"></string>
    <string name="error_user_content"></string>
    <string name="common_logout"></string>
    <string name="common_notice"></string>
    <string name="common_retry"></string>
    <string name="common_next"></string>
    <string name="common_cancel"></string>
    <string name="common_company"></string>
    <string name="common_industry"></string>
    <string name="common_add"></string>
    <string name="common_and"></string>
    <string name="time_ago_sec"></string>
    <string name="time_ago_min"></string>
    <string name="time_ago_hour"></string>
    <string name="time_ago_day"></string>
    <string name="social_add_count"></string>
    <string name="social_login_agree_agreement"></string>
    <string name="social_login_agreement"></string>
    <string name="social_login_google"></string>
    <string name="social_login_kakao"></string>
    <string name="social_login_naver"></string>
    <string name="social_login_apple"></string>
    <string name="social_account_google"></string>
    <string name="social_account_kakao"></string>
    <string name="social_account_naver"></string>
    <string name="social_account_apple"></string>
    <string name="social_login_birth"></string>
    <string name="social_login_recommended_news"></string>
    <string name="social_login_incorrect_date_format"></string>
    <string name="social_login_correct_date_format"></string>
    <string name="social_login_gender_info"></string>
    <string name="social_login_gender"></string>
    <string name="social_login_male"></string>
    <string name="social_login_female"></string>
    <string name="social_login_genderless"></string>
    <string name="social_login_interested_company"></string>
    <string name="social_login_three_more_company"></string>
    <string name="social_login_interested_industry"></string>
    <string name="social_login_one_more_company"></string>
    <string name="social_login_notification"></string>
    <string name="social_login_join_complete"></string>
    <string name="social_login_continue"></string>
    <string name="player_listen_all"></string>
    <string name="player_playlist"></string>
    <string name="player_original"></string>
    <string name="player_more"></string>
    <string name="player_report_reason"></string>
    <string name="player_report_reason_select"></string>
    <string name="player_report_translation"></string>
    <string name="player_report_summary"></string>
    <string name="player_report_sound"></string>
    <string name="player_report_etc"></string>
    <string name="player_report_reason_please"></string>
    <string name="player_report"></string>
    <string name="player_report_do"></string>
    <string name="player_share"></string>
    <string name="player_link"></string>
    <string name="detail_bookmark"></string>
    <string name="detail_related_news"></string>
    <string name="live_info_1"></string>
    <string name="live_info_2"></string>
    <string name="live_info_positive"></string>
    <string name="live_info_unknown"></string>
    <string name="live_info_negative"></string>
    <string name="discover_recommended_company"></string>
    <string name="discover_hot_rank_company"></string>
    <string name="discover_industry_news"></string>
    <string name="discover_hot_rank_industry"></string>
    <string name="discover_daily_rank_company"></string>
    <string name="discover_industry_list"></string>
    <string name="discover_hot_rank_company_description"></string>
    <string name="discover_hot_rank_industry_description"></string>
    <string name="discover_daily_rank_company_description"></string>
    <string name="search_insert_word"></string>
    <string name="search_criteria"></string>
    <string name="search_realtime"></string>
    <string name="search_recent"></string>
    <string name="search_delete_all_question"></string>
    <string name="search_delete_all"></string>
    <string name="search_no_recent_word"></string>
    <string name="search_no_word"></string>
    <string name="settings_use_env"></string>
    <string name="settings_auto_play"></string>
    <string name="settings_auto_play_please"></string>
    <string name="settings_auto_play_on"></string>
    <string name="settings_auto_play_off"></string>
    <string name="settings_manage_account"></string>
    <string name="settings_language"></string>
    <string name="settings_language_title"></string>
    <string name="settings_language_type"></string>
    <string name="settings_language_ko"></string>
    <string name="settings_language_en"></string>
    <string name="settings_language_button"></string>
    <string name="settings_text"></string>
    <string name="settings_text_prefer"></string>
    <string name="settings_text_select"></string>
    <string name="settings_text_small"></string>
    <string name="settings_text_original"></string>
    <string name="settings_text_large"></string>
    <string name="settings_logout"></string>
    <string name="settings_secession"></string>
    <string name="settings_set_interest"></string>
    <string name="settings_account_member"></string>
    <string name="settings_app_info"></string>
    <string name="settings_version_info"></string>
    <string name="settings_terms_conditions"></string>
    <string name="settings_personal_policy"></string>
    <string name="settings_current_version"></string>
    <string name="settings_subscription"></string>
    <string name="settings_subscribe"></string>
    <string name="settings_please_login"></string>
    <string name="settings_notice"></string>
    <string name="settings_bug"></string>
    <string name="settings_evaluation"></string>
    <string name="settings_share"></string>
    <string name="settings_faq"></string>
    <string name="settings_tc_service"></string>
    <string name="settings_tc_privacy"></string>
    <string name="settings_tc_payment"></string>
    <string name="settings_secession_title"></string>
    <string name="settings_secession_subtitle"></string>
    <string name="settings_secession_content1"></string>
    <string name="settings_secession_content2"></string>
    <string name="settings_secession_content3"></string>
    <string name="settings_secession_check"></string>
    <string name="settings_phone_info"></string>
    <string name="settings_os_version"></string>
    <string name="settings_app_version"></string>
    <string name="settings_my_favorite"></string>
    <string name="settings_my_favorite_none"></string>
    <string name="settings_news"></string>
    <string name="popup_send_mail_error"></string>
    <string name="popup_send_mail_error_info"></string>
    <string name="popup_notification"></string>
    <string name="popup_update"></string>
    <string name="popup_confirm"></string>
    <string name="popup_login"></string>
    <string name="popup_request_login"></string>
    <string name="popup_secession"></string>
    <string name="popup_logout"></string>


    <string name="kakao_app_key" translatable="false">fac38c5bbd682d828f6354784a812f9f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>