<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.Register1Fragment"
    android:background="@color/background_black">

    <TextView
        android:id="@+id/subtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/social_login_birth"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/social_login_recommended_news"
        android:textSize="12dp"
        android:gravity="center"
        android:textColor="@color/text_light_grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtext1" />
    
    <EditText
        android:id="@+id/birthday"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="16dp"
        android:textColorHint="@color/hint_grey"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        android:maxLength="10"
        android:background="@drawable/custom_register_box"
        android:backgroundTint="@color/dark_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtext2"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.07"/>

    <TextView
        android:id="@+id/subtext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/social_login_incorrect_date_format"
        android:textSize="12dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@id/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/birthday"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/common_next"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/custom_register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtext3"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.07"/>

</androidx.constraintlayout.widget.ConstraintLayout>