<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.setting.DeleteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/liveToolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1">


        <TextView
            android:id="@+id/liveToolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_secession"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/hint_grey"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/liveToolbar"
            app:layout_constraintBottom_toBottomOf="@id/liveToolbar"
            app:layout_constraintStart_toStartOf="@id/liveToolbar"
            app:layout_constraintEnd_toEndOf="@id/liveToolbar"/>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_general_arrowleft"
            app:layout_constraintStart_toStartOf="@id/liveToolbar"
            app:layout_constraintTop_toTopOf="@id/liveToolbar"
            app:layout_constraintBottom_toBottomOf="@id/liveToolbar"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/liveToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/deleteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/settings_secession_title"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/deleteSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings_secession_subtitle"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/hint_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteTitle"/>

        <TextView
            android:id="@+id/deleteContent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/settings_secession_content1"
            android:textStyle="bold"
            android:textColor="@color/hint_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteSubTitle"/>

        <TextView
            android:id="@+id/deleteContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_secession_content2"
            android:textStyle="bold"
            android:textColor="@color/hint_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteContent1"/>

        <TextView
            android:id="@+id/deleteContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/settings_secession_content3"
            android:textStyle="bold"
            android:textColor="@color/hint_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteContent2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteContent3">

            <ImageView
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_general_check_off"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/checkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/settings_secession_check"
                android:textStyle="bold"
                android:textColor="@color/hint_grey"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/checkBox"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/custom_register_box_grey"
            android:text="@string/settings_secession"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>