<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    android:clickable="true"
    android:focusable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.player.ReportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1">

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_report_do"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/hint_grey"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"/>

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_general_arrowleft"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/reportHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/player_report_reason_select"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reportTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportHeading"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.07">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/text_light_grey"
            android:background="@drawable/custom_register_box"
            android:backgroundTint="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/reportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/player_report_etc"
            android:textSize="15dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/reportTextBox"
            app:layout_constraintTop_toTopOf="@id/reportTextBox"
            app:layout_constraintBottom_toBottomOf="@id/reportTextBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <EditText
        android:id="@+id/reportEditText"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@color/dark_grey"
        android:hint="@string/player_report_reason_please"
        android:gravity="top"
        android:textColorHint="@color/hint_grey"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/reportTextBox"
        app:layout_constraintStart_toStartOf="@id/reportTextBox"
        app:layout_constraintWidth_percent="0.9"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/player_report"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/custom_register_box_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reportEditText"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.07"/>


</androidx.constraintlayout.widget.ConstraintLayout>